# plugin-demo

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/api/: mod.rs
src/manifest/: manifest.yml  mod.rs
src/settings/: mod.rs  settings.yml
