[package]
name = "scratch14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
lazy_static = "1.4.0"
poem = "1.3.58"
poem-openapi = { version = "3.0.4", features = ["swagger-ui"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
